...
              if (controller.isLoading) LinearProgressIndicator(),
              Expanded(
                child: Column(
                  mainAxisAlignment: MainAxisAlignment.center,
                  children: [
                    TextButton.icon(
                      key: const Key('camera_button'),
                      onPressed: () => _showTakePhotoModal(context),
                      label: Text(l10n.take_photo),
                      icon: const Icon(Icons.camera_alt_outlined),
                    ),
                    const SizedBox(height: 16),
                    TextButton.icon(
                      key: const Key('gallery_button'),
                      onPressed: () {
                        context.push('/home/gallery');
                      },
                      label: Text(l10n.gallery),
                      icon: const Icon(Icons.photo_library_outlined),
                    ),
...
